--- a/sections/Appendix/Physics/DistanceTest.tex
+++ b/sections/Appendix/Physics/DistanceTest.tex
@@ -27,3 +27,13 @@ respective distance. This is complemented with the average distance for each
 angle and the calculated variance.
 
 \dataTable{AngleTest_1}{Much data}{VeryTable}
+
+\subsection{Theorem Comparison}
+The data from these tests have been gathered imperically, but in order to
+determine their quality, or to identify any unknown variables, it is necessary
+to compare them to the theoretical results. This can be determined by using
+\autoref{FinFinEq} which was described in \autoref{CalcDist}. 
+
+
+\section{Conclusion}
+Based on the gathered data and the results thereof, we can 
