- Rescaled the HUGE picture

--- a/sections/Appendix/Physics/DistanceTest.tex
+++ b/sections/Appendix/Physics/DistanceTest.tex
@@ -7,8 +7,8 @@ used to present these tests and its resulting conclusions.
 In this test the turret is placed next to a wall which have been marked with
 distance indicators. The turret is facing right, and all tests are video
 recorded. This setup can be seen in \autoref{DistanceTestSetup.JPG}.
-\figx{DistanceTestSetup.JPG}{Experiment setup for testing projectile distance.}
-In \autoref{DistanceTestSetup.JPG} the turret's muzzle is placed exactly 1 meter
+\figx[0.1]{DistanceTestSetup.JPG}{Experiment setup for testing projectile
+distance.} In \autoref{DistanceTestSetup.JPG} the turret's muzzle is placed exactly 1 meter
 from the distance markings. As such, each full line on the markers represent a
 distance of 1 meter. A paper has been placed in the background in order to
 identify the recorded test when evaluating the videos.
