--- a/sections/Appendix/Physics/DistanceTest.tex
+++ b/sections/Appendix/Physics/DistanceTest.tex
@@ -28,6 +28,7 @@ angle and the calculated variance.
 
 \dataTable{DistanceTestData}{Angle/Distance realationship}{AngDistRel} 
 
+For each measured angle this gives the following 
 \subsection{Theorem Comparison}
 The data from these tests have been gathered imperically, but in order to
 determine their quality, or to identify any unknown variables, it is necessary
