--- a/sections/Appendix/Physics/DistanceTest.tex
+++ b/sections/Appendix/Physics/DistanceTest.tex
@@ -25,16 +25,17 @@ developed as a part of the Open Source Physics program.
 The resulting data from these tests consists of measured angles and their
 respective distance. This is complemented with the average distance for each
 angle and the calculated variance.
-
 \dataTable{DistanceTestData}{Angle/Distance realationship}{AngDistRel} 
 
-For each measured angle this gives the following 
+For each measured angle this gives the following average distance:
+\dataTable{DistanceTestDataAVG}{Average Angle/Distance
+realationship}{AngDistRelAVG}
+
 \subsection{Theorem Comparison}
 The data from these tests have been gathered imperically, but in order to
 determine their quality, or to identify any unknown variables, it is necessary
 to compare them to the theoretical results. This can be determined by using
-\autoref{FinFinEq} which was described in \autoref{CalcDist}. 
-
+\autoref{FinFinEq} which was described in \autoref{CalcDist}.
 
 \section{Conclusion}
 Based on the gathered data and the results thereof, we can 
