Few fixes, add conclusion to systemdescription

--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -4,27 +4,27 @@ the product requirements will be based on the Ren\'e's proposed challenge and
 the educational goals for the semester.\nl
 
 In this chapter an ideal scenario is constructed in order to visualize how an
-autonoumus turret might behave. The scenario is then analyzed in order to
+autonomous turret might behave. The scenario is then analyzed in order to
 understand which problems are present, and finally a summary is given.
 
 
 
-% As the only initial requirements is to be able to beat Ren\'e's challenge, 
-% 
+% As the only initial requirements is to be able to beat Ren\'e's challenge,
+%
 % it is
 % thus possible to construct an ideal scenario in order to better visualize how it
 % might work.
-% 
+%
 % it is
 % possible to construct
-% 
+%
 %  Based on our initial problem we can create a number of ideal
-% scenarios, which can be used to analyze what problems could occur while the turret operates. 
-% 
-% 
-% 
-% 
-% 
+% scenarios, which can be used to analyze what problems could occur while the turret operates.
+%
+%
+%
+%
+%
 % Fluff and red thread (Go indepth with the phases)
 
 
@@ -83,16 +83,16 @@ This leads to the following problems:
   \item How does the turret identify a target?
 \end{itemize}
 
-% -A: through sensor input we monitor the area and if a change occurs in the 
-% 
+% -A: through sensor input we monitor the area and if a change occurs in the
+%
 % In order for the turret to detect a target, it first needs to be in range.
-% 
+%
 % In order for our turret to be able to hit a target, it first needs to detect
 % it.
-% -Differentiate between background and targets? 
+% -Differentiate between background and targets?
 % -Have a zone it must protect
 % -know a way to normalize after firing
-% -Identify a target 
+% -Identify a target
 
 \subsection{Tracking}
 The ``Tracking'' phase which occurs when a target is found, is used to follow a
@@ -144,4 +144,3 @@ These questions serve as the foundation for the analysis and help to
 refine the initial problem into a problem statement. In the next chapter the
 theory behind embedded systems will be explained in order to properly
 understand the constraints imposed by such a system.
-
