--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -5,7 +5,7 @@
 \input{sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex}
 \input{sections/Analyse/SystemDescription/MI.tex}
 \input{sections/Analyse/SystemDescription/RTS.tex}
-
+\input{sections/Analyse/SystemDescription/Conclusion.tex}
 
 \input{sections/Analyse/PlatformChoice.tex}%NXT v. Arduino
 
@@ -14,7 +14,7 @@
 %	Motor
 %		DC v. Servo
 %	``Final'' choise of hardware
- 
+
 \input{sections/Requirements/ProblemStatement.tex}
 \input{sections/Requirements/Requirements.tex}
 
