Updated the \name macros to our current name Worked on the MI section

--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -1,15 +1,30 @@
-\section{Machine Intelligence}
- 
--------What is an agent (S1.1 p4) --------
+\section{Intelligent Agents}
 
-An agent is something that acts in an environment.
-An agent acts intelligent when:
-- what it does is appropriate for its circumstances and its goals
-- it is flexible to changing environments and changing goals
-- it learns from experience
-- it makes appropriate choices given its perceptual and computational
-limitation. It typically cannot observe the state of the world and has finite
-memory and limited time.
+As \namep is an autonomous turret and needs to be able to hit a moving target,
+it needs to have some intelligence in order to determine how best to hit the
+target. The turret can be considered intelligent when its decisions
+are explainable by computations and its intelligence can be judged by:
+
+\begin{enumerate}
+  \item If what it does is appropriate to its circumstances and goals.
+  \item It is flexible to changing environments and changing goals.
+  \item It learns from experience.
+  \item It makes appropriate choices given its perceptual and computational
+  limits.
+\end{enumerate}
+%See MI book, chapter 1.1 p.4
+
+In order to do this \namep needs to be able to represent the knowledge in a
+suitable way that allows it to work it into a suitable solution.
+
+
+\section{Knowledge Representation}
+
+A knowledge base is a mixture of perception, reasoning and acting, and functions
+as representation of all the knowledge the agent has.
+
+
+
 
 -------something about states---------
 ??? - maybe or maybe not
@@ -99,6 +114,17 @@ propability.
 
 
 
+
+% -------What is an agent (S1.1 p4) --------
+% 
+% An agent is something that acts in an environment.
+% An agent acts intelligent when:
+% - what it does is appropriate for its circumstances and its goals
+% - it is flexible to changing environments and changing goals
+% - it learns from experience
+% - it makes appropriate choices given its perceptual and computational
+% limitation. It typically cannot observe the state of the world and has finite
+% memory and limited time.
 
 
 
