--- a/setup/macros.tex
+++ b/setup/macros.tex
@@ -94,17 +94,17 @@
 
 
 
-\newcommand{\name}{BTR\
+\newcommand{\name}{TS101 \
 }
 
 \newcommand{\say}[1]{\textit{``#1''}} 
 
-\newcommand{\names}{BTRs\
+\newcommand{\names}{TS101s\
 }
 
-\newcommand{\fullname}{BTR Than Robocode}
+\newcommand{\fullname}{Turret System 101}
 
-\newcommand{\namep}{BTR}
+\newcommand{\namep}{TS101}
 
 \newif\iffirst
 \firsttrue
