- Added more \Source to EmbeddedSystems to remember

--- a/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
@@ -15,7 +15,7 @@ laptop, or  mainframe  computer.}\nl
 This means that embedded systems cover alot of different types of computers, for example
 the ABS-brakes in a modern car, the cash registers in retailstores, washing machines, etc.
 The requirements can therefore differ alot between systems, although they do
-share some characteristics:
+share some characteristics \Source:
 
 \begin{enumerate}
   \item \textbf{Single-functioned}:  Most embedded systems only have a single
@@ -30,8 +30,8 @@ share some characteristics:
   fact a real-time system.
 \end{enumerate}
 	
-\figx{ESConstraints}{How the constraints depend on each
-other}{}
+\figxs{ESConstraints}{How the constraints depend on each
+other}{\Source}
 
 \fix{write about microcontroller?}{Depending on whether or not it is necessary
 it may be dropped.}
