--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -18,23 +18,23 @@ difference between the experiments are the size of the object being tracked and
 whether the sensor is shielded or not. The different object sizes was tested
 with a shielded sensor and a non shielded sensor. \nl
 
-\graphL{Measured distance [cm]}{Actual distance
+\graphL{Actual distance [cm]}{Measured distance
 [cm]}{shieldedBoxStanding,shieldedBoxLandscape}{Box Standing, Box
 Landscape}{Results with a shielded sensor and a box h.
 14.2cm and w. 9cm}{shieldedTestBox}
 
-\graphL{Measured distance [cm]}{Actual distance
+\graphL{Actual distance [cm]}{Measured distance
 [cm]}{unshieldedBoxStanding,unshieldedBoxLandscape}{Box Standing, Box
 Landscape}{Results with a unshielded sensor and a box h.
 14.2cm and w. 9cm}{unshieldedTestBox}
 
-\graphL{Measured distance [cm]}{Actual distance
+\graphL{Actual distance [cm]}{Measured distance
 [cm]}{shieldedPaperStanding,shieldedPaperLandscape}{Paper Standing, Paper
-Landscape}{Results with a shielded sensor and a A3 Paper}{shieldedTestPaper}
+Landscape}{Results with a shielded sensor and a A4 Paper}{shieldedTestPaper}
 
-\graphL{Measured distance [cm]}{Actual distance
+\graphL{Actual distance [cm]}{Measured distance
 [cm]}{unshieldedPaperStanding,unshieldedPaperLandscape}{Paper Standing, Paper
-Landscape}{Results with a unshielded sensor and a A3 Paper}{unshieldedTestPaper}
+Landscape}{Results with a unshielded sensor and a A4 Paper}{unshieldedTestPaper}
 
 This sensor has a range of 0 to 255 cm and will not be too limiting factor
 compared to how far the turret is able to shoot.\nl
