gået i gang med rettelser

--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -3,36 +3,15 @@ As the project has no actual customer to set the requirements for the project,
 the product requirements will be based on the Ren\'e's proposed challenge and
 the educational goals for the semester.\nl
 
-In this chapter an ideal scenario is constructed in order to visualize how an
-autonomous turret might behave. The scenario is then analyzed in order to
-understand which problems are present, and finally a summary is given.
-
-
-
-% As the only initial requirements is to be able to beat Ren\'e's challenge,
-%
-% it is
-% thus possible to construct an ideal scenario in order to better visualize how it
-% might work.
-%
-% it is
-% possible to construct
-%
-%  Based on our initial problem we can create a number of ideal
-% scenarios, which can be used to analyze what problems could occur while the turret operates.
-%
-%
-%
-%
-%
-% Fluff and red thread (Go indepth with the phases)
-
+In this chapter we construct an ideal scenario. This scenario is then analyzed in order to
+understand the problemdomain, and finally a summary is given.
 
 \section{Ideal Scenario}
 Based on the initial problem it is now possible to describe how the turret is
-supposed to operate. An ideal scenario is constructed in order to better
-visualize it and to serve as a basis for the requirements engineering. The
-ideal scenario involves the two actors a ``Turret'' and a ``Target'' and
+supposed to operate. We construct an ideal scenario in order to better
+visualize the initial problem and to serve as a basis for the requirements engineering.
+The ideal scenario involves the two actors the ``Turret'' and the ``Target'',
+ and
 describes how they interact with each other.
 
 \begin{center}
@@ -82,17 +61,6 @@ This leads to the following problems:
   \item How can an area for the turret to monitor be defined?
   \item How does the turret identify a target?
 \end{itemize}
-
-% -A: through sensor input we monitor the area and if a change occurs in the
-%
-% In order for the turret to detect a target, it first needs to be in range.
-%
-% In order for our turret to be able to hit a target, it first needs to detect
-% it.
-% -Differentiate between background and targets?
-% -Have a zone it must protect
-% -know a way to normalize after firing
-% -Identify a target
 
 \subsection{Tracking}
 The ``Tracking'' phase which occurs when a target is found, is used to follow a
