--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -1,17 +1,19 @@
-@MISC{Robocode_ReadMe,
-  author = {Flemming N. Larsen},
-  title = {{ReadMe for Robocode}},
-  year = {2013},
-  note = {seen 29/02/2016},
-  howpublished = {\url{http://robocode.sourceforge.net/docs/ReadMe.html}}
-}
- 
 @article{vahid1999embedded,
   title={Embedded system design: a unified hardware/software approach},
   author={Vahid, Frank and Givargis, Tony},
   journal={Department of Computer Science and Engineering University of California},
   year={1999}
 }
+
+@book{OrbitBA,
+  title={Orbit BA},
+  author={Morten Brydensholt, Tommy Gjøe, Jens Ingwersen, Claus Jessen, Ole Keller, Jan Møller, Jens Vaaben},
+  isbn={9788761626684},
+  url={https://orbitbastx.systime.dk/index.php?id=frontpage},
+  year={2011},
+  publisher={Systime}
+}
+
 @book{daintith2008dictionary,
   title={A Dictionary of Computing},
   author={Daintith, J. and Wright, E.},
