--- a/sections/Requirements/Scenario.tex
+++ b/sections/Requirements/Scenario.tex
@@ -1,5 +1,5 @@
 \section{Scenarios}
-
+------- NOT CURRENTLY IN USE ---------
 Based on the initial problem it is now possible to describe how the turret is
 supposed to operate. In order to better visualize it, two concrete scenarios
 have been created with the objective to illustrate it from different angles.
