--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -39,13 +39,16 @@ In order to calculate the distance at which the projectile will touch the ground
 we need to combine \autoref{slength} and \autoref{sheight}. This is done in
 order to express the horisontal distance $\mathbf{x}$ as a function of the
 height $\mathbf{y}$, as the height can then be set to zero in order to determine
-where the projectile will land. To do this we first need to take
+where the projectile will land. This point can be seen at the end of
+arrow $\mathbf{p}$ in \autoref{DistRepresent}. To do this we first need to take
 \autoref{sheight} and express the time $\mathbf{t}$ as a function of the height
 $\mathbf{y}$. As the intention is for $\mathbf{y=0}$, this is also assumed in
 the resulting formula:
 \begin{equation}\label{Eq1}
 0=y_0+v_0*t*sin(a)-\frac{1}{2}*g*t^2
 \end{equation}
+The p
+\figx[0.2]{DistRepresent}{Projectile trajectory on the x- and y-axis.}
 Now we can isolate for $\mathbf{t}$ in \autoref{Eq1}. Using the quadratic
 formula gives two results, but assuming a positive value for $\mathbf{a}$ we get
 the following expression:
@@ -71,7 +74,7 @@ Another important point is that the variables $\mathbf{y_0}$ and $\mathbf{x_0}$
 changes dynamically based on angle of the turret. This is because the muzzle of
 the turret changes its veritcal and horizontal position based on the angle. This
 can be seen in \autoref{FinalPhysTurret}.
-\figx[0.2]{FinalPhysTurret}{Turret marked with the variables a, r, h, $x_0$ and
+\figx[0.18]{FinalPhysTurret}{Turret marked with the variables a, r, h, $x_0$ and
 $y_0$}
 
 In order to calculate $y_0$ for any given angle we can make use of the sine for
